Se removieron datos redundantes de la api
Se cambiaron index y show de Genero y Autores pensando en las vistas para la app de react
