# app/Http/Resources/AutorResource.php
@@ -9,7 +9,7 @@ class AutorResource extends JsonResource
 {
     /**
      * @OA\Schema(
-     *     schema="Autor",
+     *     schema="AutorShow",
      *         @OA\Property(
      *             property="id",
      *             type="integer",
@@ -33,26 +33,46 @@ class AutorResource extends JsonResource
      *         @OA\Property(
      *             property="libros",
      *             type="array",
-     *             @OA\Items(
-     *                 @OA\Property(
-     *                     property="id",
-     *                     type="integer",
-     *                     example="154",
-     *                 ),
-     *             ), 
+     *             @OA\Items(ref="#/components/schemas/LibroIndex"),
+     *         ),
+     * )
+     * 
+     * @OA\Schema(
+     *     schema="AutorIndex",
+     *         @OA\Property(
+     *             property="id",
+     *             type="integer",
+     *             example=1,
+     *         ),
+     *         @OA\Property(
+     *             property="type",
+     *             type="string",
+     *             example="Autor",
+     *         ),
+     *         @OA\Property(
+     *             property="nombre",
+     *             type="string",
+     *             example="Nombre Autor",
+     *         ),
+     *         @OA\Property(
+     *             property="apellido",
+     *             type="string",
+     *             example="Apellido Autor",
      *         ),
      * )
      */
     public function toArray(Request $request): array
     {
-        $libros = $this->whenLoaded('libros');
-
-        return [
+        $data = [
             'id' => $this->id,
-            'type' => 'Autor',
             'nombre'=> $this->nombre,
             'apellido'=> $this->apellido,
-            'libros' => AutorLibroResource::collection($libros),
         ];
+
+        if ($request->route()->getActionMethod() === 'show') {
+            $data['libros'] = AutorLibroResource::collection($this->libros);
+        }
+
+        return $data;
     }
 }
